# three-example

./: .gitignore  Makefile  README.md  cabal.project  flake.nix  miso-three-test.cabal  three-example.cabal  three-test.cabal
.github/workflows/: main.yml
doc/: Makefile  export.uml  shell.nix  three-js.uml
old/: Main2.hs  Main3.hs  Main4.hs  Main5.hs
playground/: index.html  index2.html  main.js  mwe.html  mwe.js
src/: API.hs  FFI.hs  Main.hs  Main0.hs  Main1.hs  Main2.hs  Main3.hs  Run.hs  old.hs
static/: index.html  playground.html  playground.js
