cabal-version:          3.0
name:                   miso-three-test
version:                0.2

executable app
  hs-source-dirs:       src
  main-is:              Main.hs
  -- other-modules:        Model
  build-depends:        base, containers, jsaddle, miso
  default-language:     GHC2021
  ghc-options:          -Wall -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
  cpp-options:          -DWASM
  default-extensions:   CPP TemplateHaskell
 
