cabal-version:          3.0
name:                   three-test
version:                0.2

common deps
  build-depends:        base, jsaddle, lens, miso, three
  default-language:     GHC2021
  ghc-options:          -Wall -Wno-type-defaults -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
  cpp-options:          -DWASM
  default-extensions:   CPP TemplateHaskell

executable app
  import:               deps
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        API

